--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^7.0.0"
+        "mongoose": "^7.0.0",
+        "morgan": "^1.10.0"
     }
 }
