--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
     }
 }
