--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     },
     "homepage": "https://github.com/Lord-Prinz-Team/keyBackend#readme",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^7.0.0",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     }
