--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/morgan": "^1.9.4",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     }
