--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-mongo-sanitize": "^2.2.0",
+        "helmet": "^6.0.1",
         "mongoose": "^7.0.0",
         "morgan": "^1.10.0"
     },
@@ -30,6 +32,7 @@
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
+        "compression": "^1.7.4",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     }
