--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^6.7.0",
         "helmet": "^6.0.1",
         "mongoose": "^7.0.0",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
