--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "^4.18.2",
         "express-mongo-sanitize": "^2.2.0",
         "express-rate-limit": "^6.7.0",
+        "faker": "^6.6.6",
         "helmet": "^6.0.1",
         "mongoose": "^7.0.0",
         "morgan": "^1.10.0"
