--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@faker-js/faker": "^7.6.0",
         "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
