--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-    "name": "keybackend",
-    "version": "1.0.0",
-    "description": "Backend for PROJECT:Key",
-    "main": "server.ts",
-    "scripts": {
-        "start": "ts-node server.ts",
-        "dev": "nodemon server.ts",
-        "start:prod": "NODE_ENV=production nodemon server.ts"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Lord-Prinz-Team/keyBackend.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Lord-Prinz-Team/keyBackend/issues"
-    },
-    "homepage": "https://github.com/Lord-Prinz-Team/keyBackend#readme",
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "express-mongo-sanitize": "^2.2.0",
-        "express-rate-limit": "^6.7.0",
-        "faker": "^6.6.6",
-        "helmet": "^6.0.1",
-        "mongoose": "^7.0.0",
-        "morgan": "^1.10.0"
-    },
-    "devDependencies": {
-        "@faker-js/faker": "^7.6.0",
-        "@types/compression": "^1.7.2",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "@types/morgan": "^1.9.4",
-        "compression": "^1.7.4",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
-    }
+	"name": "keybackend",
+	"version": "1.0.0",
+	"description": "Backend for PROJECT:Key",
+	"main": "server.ts",
+	"scripts": {
+		"start": "ts-node server.ts",
+		"dev": "nodemon server.ts",
+		"start:prod": "NODE_ENV=production nodemon server.ts",
+		"import-data": "ts-node dev-data/data/import-dev-data.ts --import",
+		"import-data:users": "ts-node dev-data/data/import-dev-data.ts --import users",
+		"import-data:rooms": "ts-node dev-data/data/import-dev-data.ts --import rooms",
+		"import-data:history": "ts-node dev-data/data/import-dev-data.ts --import history",
+		"delete-data": "ts-node dev-data/data/import-dev-data.ts --delete"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Lord-Prinz-Team/keyBackend.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Lord-Prinz-Team/keyBackend/issues"
+	},
+	"homepage": "https://github.com/Lord-Prinz-Team/keyBackend#readme",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"express-mongo-sanitize": "^2.2.0",
+		"express-rate-limit": "^6.7.0",
+		"faker": "^6.6.6",
+		"helmet": "^6.0.1",
+		"mongoose": "^7.0.0",
+		"morgan": "^1.10.0"
+	},
+	"devDependencies": {
+		"@faker-js/faker": "^7.6.0",
+		"@types/compression": "^1.7.2",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/morgan": "^1.9.4",
+		"compression": "^1.7.4",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5"
+	}
 }
